--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -31,7 +31,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      HUGO_VERSION: 'latest'
+      HUGO_VERSION: '0.154.5'
       extended: true
     steps:
       - name: Install Hugo CLI
