--- a/hugo.yaml
+++ b/hugo.yaml
@@ -38,7 +38,7 @@ params:
     UseHugoToc: true
     disableSpecial1stPost: false
     disableScrollToTop: false
-    comments: false
+    comments: true
     hidemeta: false
     hideSummary: false
     ShowToc: true
@@ -113,6 +113,21 @@ params:
         minMatchCharLength: 0
         limit: 10 # refer: https://www.fusejs.io/api/methods.html#search
         keys: ['title', 'permalink', 'summary', 'content']
+
+    giscus:
+        repo: "trinhchien/ChientdBlog"
+        repoId: "R_kgDOQ4AM-A"
+        category: "General"
+        categoryId: "DIC_kwDOQ4AM-M4C1GuR"
+        mapping: "pathname"
+        reactionsEnabled: "1"
+        emitMetadata: "0"
+        inputPosition: "top"
+        theme: "preferred_color_scheme"
+        lang: "en"
+        loading: "lazy"
+        crossorigin: "anonymous"
+
 menu:
     main:
         - identifier: categories
